--- a/core/javac/build.gradle
+++ b/core/javac/build.gradle
@@ -2,4 +2,5 @@ dependencies {
     compileOnly files(org.gradle.internal.jvm.Jvm.current().toolsJar)
 
     testCompile project(':core:test').sourceSets.test.output
+    testCompile project(path: ':core:test', configuration: 'testCompile')
 }
