Issue #7: Provide smart resolve for method param annotations in TrautePlugin
* resolving AST annotations vs information collected from imports
* defined default NotNull annotations to use
* minor refactoring

--- a/core/test/build.gradle
+++ b/core/test/build.gradle
@@ -1,3 +1,12 @@
+import org.gradle.internal.jvm.Jvm
+
 dependencies {
-    testCompile files(org.gradle.internal.jvm.Jvm.current().toolsJar)
+    testCompile files(Jvm.current().toolsJar)
+
+    // Jars with default NotNull annotations
+    testCompile 'com.google.code.findbugs:jsr305:3.0.2'
+    testCompile 'javax:javaee-api:8.0'
+    testCompile 'findbugs:annotations:1.0.0'
+    testCompile 'com.android.support:support-core-utils:26.1.0'
+    testCompile 'org.eclipse.jdt:org.eclipse.jdt.annotation:2.1.0'
 }
