--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,13 @@ allprojects {
     sourceCompatibility = 1.8
 
     repositories {
+        mavenLocal()
         mavenCentral()
+
+        // For android annotations
+        maven {
+            url "https://maven.google.com"
+        }
     }
 
     dependencies {
