Project structure changes: * removed 'asm' module as we'll try to ship without it initially * introduce 'common' module and moved a couple of common classes there.   The main reason is to allow static checks in tests (e.g. it's   possible to use InstrumentationType directly now)

--- a/core/javac/build.gradle
+++ b/core/javac/build.gradle
@@ -3,6 +3,8 @@ import org.gradle.internal.jvm.Jvm
 dependencies {
     compileOnly files(Jvm.current().toolsJar)
 
+    compile project(':core:common')
+
     testCompile project(':core:test').sourceSets.test.output
     testCompile project(path: ':core:test', configuration: 'testCompile')
 }
