--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ allprojects {
     group 'org.denis'
     version '1.0.0'
 
+    ext {
+        junitVersion = '5.0.1'
+    }
+
     apply plugin: 'java'
 
     sourceCompatibility = 1.8
@@ -19,6 +23,7 @@ allprojects {
     dependencies {
         compile 'org.jetbrains:annotations:15.0'
 
-        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+        testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     }
 }
