Issue #48: Release javac plugin to maven central
* 'traute-javac-plugin' -> 'javac-plugin'
* adjusted javadocs in a way to make them acceptable
  by the javadoc tool
* configured general 'release to maven central' and
  'javac-plugin'-specific rules

--- a/facade/gradle/build.gradle
+++ b/facade/gradle/build.gradle
@@ -23,7 +23,7 @@ task createClasspathManifest {
 }
 
 dependencies {
-    compile project(':core:traute-javac-plugin')
+    compile project(':core:javac-plugin')
 
     testCompile gradleTestKit()
     testCompile localGroovy()
