--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,5 @@ rootProject.name = 'traute'
 
 include 'core:common', 'core:javac', 'core:test', 'facade:gradle', 'facade:maven', 'facade:ant'
 
-project(':core:javac').name = 'traute-javac-plugin'
+project(':core:javac').name = 'javac-plugin'
 project(':core:test').name = 'test-common'
