--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,14 @@ buildscript {
     }
     dependencies {
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.1'
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.11.0"
     }
 }
 
+apply plugin: 'io.codearte.nexus-staging'
+
 allprojects {
-    group 'org.denis'
+    group 'tech.harmonysoft'
     version '1.0.0'
 
     ext {
@@ -18,6 +21,8 @@ allprojects {
 
     apply plugin: 'java'
     apply plugin: 'org.junit.platform.gradle.plugin'
+    apply plugin: 'maven'
+    apply plugin: 'signing'
 
     sourceCompatibility = 1.8
 
@@ -40,5 +45,65 @@ allprojects {
         testCompile "org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion"
 
         testCompileOnly 'org.apiguardian:apiguardian-api:1.0.0'
+    }
+
+    task javadocJar(type: Jar) {
+        classifier = 'javadoc'
+        from javadoc
+    }
+
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    artifacts {
+        archives javadocJar, sourcesJar
+    }
+
+    signing {
+        sign configurations.archives
+    }
+
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                    authentication(userName: ossrhUsername, password: ossrhPassword)
+                }
+
+                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                    authentication(userName: ossrhUsername, password: ossrhPassword)
+                }
+
+                pom.project {
+                    packaging 'jar'
+
+                    scm {
+                        connection 'scm:git:git://github.com/denis-zhdanov/traute.git'
+                        developerConnection 'scm:git:git://github.com/denis-zhdanov/traute.git'
+                        url 'https://github.com/denis-zhdanov/traute'
+                    }
+
+                    licenses {
+                        license {
+                            name 'The MIT License (MIT)'
+                            url 'http://opensource.org/licenses/MIT'
+                            distribution 'repo'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id 'denis'
+                            name 'Denis Zhdanov'
+                            email 'denzhdanov@gmail.com'
+                        }
+                    }
+                }
+            }
+        }
     }
 }
