--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,27 @@ allprojects {
     ext {
         junitJupiterVersion = '5.0.1'
         junitPlatformVersion = '1.0.1'
+
+        setupBintray = {
+            bintray {
+                user = bintrayUser
+                key = bintrayApiKey
+                publications = ['MyPublication']
+
+                pkg {
+
+                    repo = 'harmonysoft.tech'
+                    name = archivesBaseName
+                    licenses = ['MIT']
+                    vcsUrl = 'https://github.com/denis-zhdanov/traute.git'
+
+                    version {
+                        name = version
+                        released  = new Date()
+                    }
+                }
+            }
+        }
     }
 
     apply plugin: 'java'
