Stub gradle.properties values for CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: java
 
 sudo: false
 
+env:
+  - ossrhUsername=dummy
+  - ossrhPassword=dummy
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
