--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ language: java
 sudo: false
 
 env:
-  - ORG_GRADLE_PROJECT_ossrhUsername=dummy
-  - ORG_GRADLE_PROJECT_ossrhPassword=dummy
+  - ORG_GRADLE_PROJECT_ossrhUsername=dummy ORG_GRADLE_PROJECT_ossrhPassword=dummy
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
