--- a/facade/ant/sample/build.xml
+++ b/facade/ant/sample/build.xml
@@ -24,7 +24,7 @@
         <ivy:cachepath pathid="lib.path.id"/>
         <echo message="compiling..."/>
         <mkdir dir="${build.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="lib.path.id">
+        <javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="lib.path.id" debug="true">
             <compilerarg value="-Xplugin:Traute"/>
             <compilerarg value="-Atraute.log.verbose=true"/>
         </javac>
