Corrected Maven configuration instructions

--- a/facade/maven/sample/pom.xml
+++ b/facade/maven/sample/pom.xml
@@ -13,7 +13,7 @@
             <groupId>tech.harmonysoft</groupId>
             <artifactId>traute-javac</artifactId>
             <version>1.0.6</version> <!-- use the latest available version here -->
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
