--- a/core/javac/build.gradle
+++ b/core/javac/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 
     testCompile project(':core:test-common').sourceSets.test.output
     testCompile project(path: ':core:test-common', configuration: 'testCompile')
+    testCompile 'org.mockito:mockito-core:2.12.0'
 }
 
 jar {
