--- a/core/test/build.gradle
+++ b/core/test/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     testCompile 'findbugs:annotations:1.0.0'
     testCompile 'com.android.support:support-annotations:26.1.0'
     testCompile 'org.eclipse.jdt:org.eclipse.jdt.annotation:2.1.0'
+    testCompile 'org.springframework:spring-core:5.0.1.RELEASE'
 }
 
 task testJar(type: Jar) {
