--- a/facade/ant/sample/ivy.xml
+++ b/facade/ant/sample/ivy.xml
@@ -2,8 +2,12 @@
 
 <ivy-module version="2.0">
     <info organisation="tech.harmonysoft.oss.traute" module="traute-ant-sample"/>
+    <configurations>
+        <conf name="compileOnly"/>
+        <conf name="compile"/>
+    </configurations>
     <dependencies>
-        <dependency org="tech.harmonysoft" name="traute-javac" rev="1.0.10"/>
-        <dependency org="org.jetbrains" name="annotations" rev="15.0"/>
+        <dependency org="tech.harmonysoft" name="traute-javac" rev="1.0.10" conf="compileOnly->default"/>
+        <dependency org="org.jetbrains" name="annotations" rev="15.0" conf="compile->default"/>
     </dependencies>
 </ivy-module>
