--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'io.codearte.nexus-staging'
 
 allprojects {
     group 'tech.harmonysoft'
-    version '1.0.0'
+    version = '1.1.0'
 
     ext {
         junitJupiterVersion = '5.0.1'
