--- a/facade/gradle/build.gradle
+++ b/facade/gradle/build.gradle
@@ -16,7 +16,6 @@ apply plugin: 'groovy'
 apply plugin: 'java-gradle-plugin'
 apply plugin: 'com.gradle.plugin-publish'
 
-version = '1.0.6'
 archivesBaseName = 'traute-gradle'
 def pluginDisplayName = 'Traute Gradle plugin'
 def pluginDescription = 'A Gradle plugin which eases Traute Javac plugin appliance in Gradle projects'
@@ -62,7 +61,7 @@ jar {
     into('/')
     from {
         configurations.compileOnly
-                .filter { it.name.contains('common') }
+                .filter { it.name.contains('common') || it.name.contains('traute') }
                 .collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
