Make it possible to build the project in a non-administrative environment

--- a/build.gradle
+++ b/build.gradle
@@ -100,11 +100,13 @@ allprojects {
                 }
 
                 repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                    authentication(userName: ossrhUsername, password: ossrhPassword)
+                    authentication(userName: project.hasProperty('ossrhUsername') ? ossrhUsername : '',
+                                   password: project.hasProperty('ossrhPassword') ? ossrhPassword : '')
                 }
 
                 snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                    authentication(userName: ossrhUsername, password: ossrhPassword)
+                    authentication(userName: project.hasProperty('ossrhUsername') ? ossrhUsername : '',
+                                   password: project.hasProperty('ossrhPassword') ? ossrhPassword : '')
                 }
 
                 pom.project {
